# pe_forge

./: .gitignore  CMakeLists.txt  README.md
include/pe_forge/: executable.hpp  section.hpp
include/pe_forge/editor/: nt_headers_editor.hpp  sections_editor.hpp
include/pe_forge/viewer/: dos_header_view.hpp  imports_view.hpp  nt_headers_view.hpp  sections_view.hpp
src/: parse_helpers.hpp  utils.hpp
src/editor/: nt_headers_editor.cpp  sections_editor.cpp
src/viewer/: dos_header_view.cpp  imports_view.cpp  nt_headers_view.cpp  sections_view.cpp
tests/: CMakeLists.txt  test_helpers.hpp
tests/editor/: sections_editor_tests.cpp
tests/viewer/: dos_header_view_tests.cpp  imports_view_tests.cpp  nt_headers_view_tests.cpp  sections_views_tests.cpp
